# qm9-gnn

./: .gitignore  README.md  pyproject.toml
qm9_gnn/data_loader/: qm9.py
qm9_gnn/models/: gnn.py  lightning_model.py
qm9_gnn/utils/: constants.py  metrics.py
scripts/: inference.py  train.py
