[project]
name = "qm9-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.1",
    "mlflow>=2.21.2",
    "rdkit>=2024.9.6",
    "rich>=13.9.4",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
